--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
+    "oidc-client": "1.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0",
-    "rxjs": "6.6.0"
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.0",
@@ -25,7 +25,7 @@
     "prettier": "^2.0.5",
     "react-scripts": "^3.4.1",
     "react-test-renderer": "16.13.1",
-    "typescript": "~3.9.6"
+    "typescript": "~3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
