--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: PowerShell@2
+  inputs:
+    filePath: 'src/Config-Environment.ps1'
 - task: NodeTool@0
   inputs:
     versionSpec: '12.x'
