--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ pool: default
 steps:
   - task: PowerShell@2
     inputs:
-      filePath: "src/Config-Environment.ps1"
+      filePath: "scripts/Config-Environment.ps1"
   - task: NodeTool@0
     inputs:
       versionSpec: "12.x"
