--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,10 @@ steps:
       versionSpec: "12.x"
     displayName: "Install Node.js"
   - script: |
-      npm install
-      npm run build
-    displayName: "npm install and build"
+      npm install -g yarn
+      yarn install
+      yarn build
+    displayName: "yarn install and build"
   - task: ArchiveFiles@2
     inputs:
       rootFolderOrFile: "$(Build.SourcesDirectory)/build"
