--- a/package.json
+++ b/package.json
@@ -3,31 +3,48 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "4.0.0-alpha.56",
-    "@microsoft/applicationinsights-react-js": "3.0.4",
-    "@microsoft/applicationinsights-web": "2.5.9",
+    "@emotion/react": "11.1.4",
+    "@emotion/styled": "11.0.0",
+    "@material-ui/core": "5.0.0-alpha.24",
+    "@material-ui/icons": "5.0.0-alpha.24",
+    "@material-ui/lab": "5.0.0-alpha.24",
+    "@microsoft/applicationinsights-react-js": "3.0.5",
+    "@microsoft/applicationinsights-web": "2.5.11",
+    "cleave.js": "1.6.0",
     "oidc-client": "1.10.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-router-dom": "5.2.0"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-hook-form": "6.14.2",
+    "react-router-dom": "5.2.0",
+    "workbox-background-sync": "6.0.2",
+    "workbox-broadcast-update": "6.0.2",
+    "workbox-cacheable-response": "6.0.2",
+    "workbox-core": "6.0.2",
+    "workbox-expiration": "6.0.2",
+    "workbox-google-analytics": "6.0.2",
+    "workbox-navigation-preload": "6.0.2",
+    "workbox-precaching": "6.0.2",
+    "workbox-range-requests": "6.0.2",
+    "workbox-routing": "6.0.2",
+    "workbox-strategies": "6.0.2",
+    "workbox-streams": "6.0.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-test-renderer": "^16.9.3",
-    "prettier": "^2.1.2",
-    "react-scripts": "^4.0.0",
-    "react-test-renderer": "16.14.0",
-    "sass": "^1.29.0",
-    "typescript": "^4.0.5"
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/cleave.js": "^1.4.4",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.0",
+    "prettier": "^2.2.1",
+    "react-scripts": "^4.0.1",
+    "react-test-renderer": "^17.0.1",
+    "sass": "^1.32.5",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
