--- a/.gitignore
+++ b/.gitignore
@@ -270,6 +270,10 @@ __pycache__/
 *.pyc
 
 # Yarn cache
-.yarn/
-/.pnp
-.pnp.js
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
