Update image repository

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: chbprod.azurecr.io/chabloom-accounts-frontend
+  repository: mdcasey/chabloom-accounts-frontend
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
